# jang

./: .gitignore  CODEOWNERS  Cargo.toml
.github/workflows/: fuzz_parser.yml  jang_test.yml
.vim/: coc-settings.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parser.rs
jang-examples/: README.md  euler_problem1.jang  euler_problem3.jang  euler_problem4.jang  euler_problem6.jang  euler_problem7.jang
jang-highlight/: CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json
jang-highlight/syntaxes/: jang.tmLanguage.json  jang.tmLanguage.yaml
src/: error.rs  lib.rs  main.rs  source_location.rs
src/interpreter/: error.rs  interpreter.rs  machine.rs  mod.rs  parse_as.rs  value.rs
src/interpreter/bytecode/: compiler.rs  error.rs  instruction.rs  instruction_block_list.rs  lexical_scope.rs  local_table.rs  machine.rs  mod.rs
src/parser/: char_iter.rs  char_stream.rs  grammar.rs  lexer.rs  mod.rs  test_util.rs  token.rs
src/parser/ast/: assignment_statement.rs  ast.rs  binary_expression.rs  bind_statement.rs  block.rs  builder_context.rs  call_expression.rs  code_formatter.rs  dot_expression.rs  enum_type_decl.rs  expression.rs  expression_list.rs  function_decl.rs  ids.rs  if_statement.rs  jang_file.rs  let_statement.rs  literal_expression.rs  loop_statement.rs  mod.rs  name_ref_expression.rs  rebind_statement.rs  ret_statement.rs  standalone_expression.rs  statement.rs  structured_type_decl.rs  type_decl.rs  type_expr.rs  unary_experssion.rs  var_decl.rs  var_ref.rs
src/parser/token/: ident.rs  keyword.rs  literal.rs  mod.rs  operator.rs  spacing.rs  test_util.rs
src/type_checker/: error.rs  mod.rs  type_analysis.rs  type_checker.rs  type_inference_table.rs  typed_ast_id.rs
src/type_checker/types/: concrete.rs  function.rs  mod.rs  primitive.rs  registry.rs
tests/: jang_examples.rs
(+23 files in other folders)
