[package]
name = "jang"
version = "0.1.0"
edition = "2024"

[dependencies]
cknittel-util = { git = "https://github.com/ClaytonKnittel/cknittel-util.git", rev = "00b464a993cfb21179538a49f9d123c28fefc7e1", features = [
  "builder",
  "from-variants",
] }
clap = { version = "4.6.0", features = ["derive"] }
itertools = "0.14.0"
parser_generator = { git = "https://github.com/ClaytonKnittel/parser_generator.git", rev = "65e2197bfc3a9b53831d5810f97b4a7d2f749a4c" }
utf8-chars = "3.0.6"

[dev-dependencies]
googletest = "0.14.2"

[profile.release]
lto = "fat"
codegen-units = 1
