[package]
name = "jang"
version = "0.1.0"
edition = "2024"

[dependencies]
cknittel-util = { git = "https://github.com/ClaytonKnittel/cknittel-util.git", rev = "06a0c957e3e37fd7c658a46ba30d9ece010b11fe", features = [
  "builder",
  "from-variants",
] }
clap = { version = "4.6.0", features = ["derive"] }
itertools = "0.14.0"
parser_generator = { git = "https://github.com/ClaytonKnittel/parser_generator.git", rev = "75b0bfd5d9690d44c4854c3f739cac2949e3753f" }
utf8-chars = "3.0.6"

[dev-dependencies]
googletest = "0.14.2"

[profile.release]
lto = "fat"
codegen-units = 1
