[package]
name = "jang"
version = "0.1.0"
edition = "2024"

[dependencies]
cknittel-util = { git = "https://github.com/ClaytonKnittel/cknittel-util.git", rev = "8068fb73dcca10fcf92417c6cd2bedfdde1b7e5b", features = [
  "builder",
  "from-variants",
] }
clap = { version = "4.6.0", features = ["derive"] }
itertools = "0.14.0"
parser_generator = { git = "https://github.com/ClaytonKnittel/parser_generator.git", rev = "f7edf33f9174aef6fc8a7350e7f74059ec48e26a" }
utf8-chars = "3.0.6"

[dev-dependencies]
googletest = "0.14.2"

[profile.release]
lto = "fat"
codegen-units = 1
